removed css file from git, fixe namespace from app to App fixed growing button problem. (scenario edit etc)

--- a/resources/assets/sass/unattached.scss
+++ b/resources/assets/sass/unattached.scss
@@ -127,7 +127,7 @@ a.custom-scenario{
   background-color: powderblue;
   transition: font-size .5s, color .1s;
   &:hover{
-    font-size:30px;
+    //font-size:30px;
     color:white;
     border-color: $satlightskyblue;
   }
