--- a/resources/assets/js/components/MedievalMixins.scss
+++ b/resources/assets/js/components/MedievalMixins.scss
@@ -7,7 +7,7 @@
     .counterWrapper{
       background-color:$cwBackground;
     }
-    .unit-steps, .unit-numbers{
+    .unit-steps, .unit-numbers, .unit-command{
       color:$unColor;
     }
   }
