Wagons added to medieval games

--- a/resources/assets/js/components/MedievalMixins.scss
+++ b/resources/assets/js/components/MedievalMixins.scss
@@ -77,3 +77,9 @@
   }
 
 }
+@mixin wagon($nationality){
+.#{$nationality}.wagon .counterWrapper .counter {
+  background-image: url('badges/Wagon.png');
+  background-size: $badge-size;
+}
+}
